# hermes-stack-bootstrap

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  install.sh  pyproject.toml
hermes_stack_bootstrap/: __init__.py  bootstrap_apply.py  bootstrap_commands.py  bootstrap_data.py  bootstrap_option_flow.py  bootstrap_plan.py  bootstrap_prompts.py  bootstrap_runtime.py  bootstrap_shell.py  bootstrap_skill_packs.py  bootstrap_state.py  bootstrap_tui.py  bootstrap_utils.py  bootstrap_wizard.py  cli.py  config_merge.py  env_template.py  hermes_discovery.py  hermes_models.py  provider_setup.py  soul_generator.py  wizard_cli_flags.py  wizard_core.py  wizard_flow.py  wizard_state.py  wizard_tui.py  wizard_v2_flow.py  wizard_v2_state.py
scripts/: check_file_line_limit.py
templates/: config.fragment.yaml  env.example
tests/: helpers.py  test_atomic_writes.py  test_bootstrap_commands.py  test_cli_plan.py  test_cli_plan_apply.py  test_cli_plan_skill_packs.py  test_cli_plan_wizard.py  test_config_merge.py  test_entrypoint_regressions.py  test_env_template.py  test_hermes_discovery.py  test_hermes_models.py  test_install_script.py  test_install_sh.py  test_installer_state.py  test_installer_ux_regressions.py  test_integration.py  test_max_file_lines.py  test_provider_setup.py  test_retry_backoff.py  test_soul_generator.py  test_timeout_behavior.py  test_wizard_state.py  test_wizard_v2_state.py
