[project]
name = "hermes-stack-bootstrap"
version = "0.1.4"
description = "Bootstrap Hermes LCM, Mnemosyne, and progress-tail with a small safe wizard."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6", "rich>=13", "prompt_toolkit>=3"]

[project.scripts]
hermes-stack-bootstrap = "hermes_stack_bootstrap.cli:main"
