[project]
name = "hermes-stack-bootstrap"
version = "0.1.12"
description = "Bootstrap Hermes LCM, Mnemosyne, and progress-tail with a small safe wizard."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6", "rich>=13", "prompt_toolkit>=3"]

[project.optional-dependencies]
dev = ["pre-commit>=4", "pytest>=8", "ruff>=0.15"]

[project.scripts]
hermes-stack-bootstrap = "hermes_stack_bootstrap.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_stack_bootstrap*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"hermes_stack_bootstrap/cli.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
